# xq

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  go.sum  start_perf.sh  xq.sln
client/: client.cpp  client.vcxproj
ex/: client.go  db.go  etcd.go  etcd_test.go  mysql.go  protobuf.go  redis.go  server.go  uuid.go
example/client/: CMakeLists.txt  client.cpp  client.go
example/rux_client/: CMakeLists.txt  rux_client.cpp
example/rux_server/: CMakeLists.txt  rux_server.cpp
example/server/: CMakeLists.txt  server.cpp  server.go
example/timer/: CMakeLists.txt  timer.cpp
example/udp_client/: CMakeLists.txt  udp_client.cpp
example/udp_server/: CMakeLists.txt  udp_server.cpp
example/udx/: CMakeLists.txt  udx.cpp
example/udx_client/: CMakeLists.txt  udx_client.cpp
example/udx_client/udx_client.dir/Release/: udx_client.exe.recipe
example/udx_client/udx_client.dir/Release/udx_client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
example/udx_server/: CMakeLists.txt  udx_server.cpp
example/udx_server/udx_server.dir/Release/: udx_server.exe.recipe
example/udx_server/udx_server.dir/Release/udx_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
example/unit_test/: CMakeLists.txt  unit_test.cpp
include/xq/net/: basic.hpp  cc_custom.hpp  common.hpp  data_type.hpp  kcp.hpp  kcp_conn.hpp  kcp_listener.hpp  net.hpp  net.in.h  rux.hpp  rux.in.h  rux_client.hpp  rux_server.hpp  timer.hpp  udp_session.hpp  udx.hpp
include/xq/tools/: tools.hpp
lib/Release/: xq.lib
log/: log.go  log_test.go
nw/: constant.go  tools.go  tools_test.go
nw/client/: errors.go  interface.go  options.go
nw/client/kcp/: client.go  kcp_test.go
nw/client/tcp/: client.go  tcp_test.go
nw/client/ws/: client.go  ws_test.go
nw/example/client/: client.go
nw/example/server/: server.go
nw/http/: post.go
nw/io/: io.go
nw/server/: errors.go  interface.go  options.go
nw/server/kcp/: conn.go  kcp_test.go  server.go
nw/server/tcp/: conn.go  server.go  tcp_test.go
nw/server/ws/: conn.go  server.go  ws_test.go
security/: aes128.go  aes128_test.go  opt_auth.go
server/: server.cpp  server.vcxproj
src/: CMakeLists.txt
src/xq.dir/Release/: xq.lib.recipe
src/xq.dir/Release/xq.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  xq.lastbuildstate
src/xq/net/: kcp.hpp  kcp_conn.hpp  kcp_listener.hpp  net.hpp  net.in.c  rux.in.c
src/xq/third/: AES.cpp  ikcp.c  ikcp.h  time_wheel.cpp  time_wheel_scheduler.cpp  timer.cpp
src/xq/tools/: tools.hpp
test/: main.go
test/tools/: CMakeLists.txt  tools.cpp
utils/: aes.go  arr.go  goroutine.go  md5.go  object.pool.go  string.go  sys.go  sys_test.go  to_ptr.go  uuid.go  uuid_test.go
utils/ex/: etcd.go  locker.go  protobuf.go
xq/: AccountProgressionArchive-甜菜琪#5563.waf  Makefile  build_flame.sh  ikcp.c  main.cpp  net.cpp  net.hpp  start_perf.sh  tools.cpp  tools.hpp  xq.vcxproj
xq/net/: kcp.hpp  kcp_conn.hpp  kcp_listener.cpp  kcp_listener.hpp  kcp_sess.hpp  net.cpp  net.hpp
xq/third/: ikcp.c  ikcp.h
xq/tools/: tools.cpp  tools.hpp
